[package]
name = "simple_audio"
version = "1.2.1"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
cpal = "0.15.0"
flutter_rust_bridge = "1.65.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
# symphonia = { version = "0.5.2", features = ["all"] }
symphonia = { git = "https://github.com/erikas-taroza/Symphonia", branch = "mp4-improvements", features = ["all"] }
rb = "0.4.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
openssl-sys = { version = "0.9.77", features = ["vendored"] }
rubato = "0.12.0"
lazy_static = "1.4.0"
rangemap = "1.3.0"
arrayvec = "0.7.2"
ebur128 = "0.1.7"

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "android"), not(target_os = "ios")))'.dependencies]
dbus = "0.9.6"
dbus-crossroads = "0.5.1"

# target.'cfg(target_os = "windows")'.
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.43.0"
features = [
	"Foundation",
	"Media",
	"Win32_Foundation",
	"Win32_System_WinRT",
	"Storage_Streams",
]

[profile.release]
lto = true
