[package]
name = "simple_audio"
version = "1.6.6"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
cpal = "0.15.2"
flutter_rust_bridge = "=1.82.1"
reqwest = { version = "0", features = [
	"blocking",
	"rustls-tls",
], default-features = false }
# symphonia = { version = "0.5.2", features = ["all"] }
symphonia = { git = "https://github.com/erikas-taroza/Symphonia", branch = "mp4-opus-improvements", features = [
	"all",
] }
symphonia-core = { git = "https://github.com/erikas-taroza/Symphonia", branch = "mp4-opus-improvements" }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rubato = "0.12.0"
rangemap = "1.3.0"
arrayvec = "0.7.2"
ebur128 = "0.1.7"
anyhow = "1.0.69"
lazy_static = "1.4.0"
audiopus = "0.3.0-rc.0"

# Linux Dependencies
[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "android"), not(target_os = "ios")))'.dependencies]
zbus = "3.12.0"
pollster = "0.3.0"

# Android Dependencies
[target.'cfg(target_os = "android")'.dependencies]
# Debug only.
android_logger = "0.13.1"
log = "0.4.17"
jni = "0.21.1"
ndk-context = "0.1.1"

# Windows API Dependency
# target.'cfg(target_os = "windows")'.
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.43.0"
features = [
	"Foundation",
	"Media",
	"Win32_Foundation",
	"Win32_System_WinRT",
	"Storage_Streams",
]

[profile.release]
lto = true

[patch.crates-io]
audiopus_sys = { git = "https://github.com/erikas-taroza/audiopus_sys" }
