[package]
name = "simple_audio"
version = "1.9.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
cpal = "0.15.2"
flutter_rust_bridge = "=1.82.1"
reqwest = { version = "0", features = [
	"blocking",
	"rustls-tls",
], default-features = false }
# symphonia = { version = "0.5.2", features = ["all"] }
symphonia = { git = "https://github.com/erikas-taroza/Symphonia", branch = "mp4-opus-improvements", features = [
	"all",
] }
symphonia-core = { git = "https://github.com/erikas-taroza/Symphonia", branch = "mp4-opus-improvements" }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rubato = "0.14.1"
rangemap = "1.4.0"
arrayvec = "0.7.4"
ebur128 = "0.1.8"
anyhow = "1.0.75"
lazy_static = "1.4.0"
audiopus = "0.3.0-rc.0"

# Android Dependencies
[target.'cfg(target_os = "android")'.dependencies]
# Debug only.
android_logger = "0.13.3"
log = "0.4.20"
jni = "0.21.1"
ndk-context = "0.1.1"

[profile.release]
lto = true

[patch.crates-io]
audiopus_sys = { git = "https://github.com/erikas-taroza/audiopus_sys" }
