[package]
name = 'simple_audio'
version = '2.0.6'
edition = '2021'

[features]
default = ['all']
all = ['http_streaming', 'hls_streaming', 'opus']
http_streaming = ['dep:reqwest']
hls_streaming = ['dep:reqwest']
opus = ['dep:audiopus']

[dependencies]
rubato = '0.12.0'
rangemap = '1.4.0'
arrayvec = '0.7.4'
ebur128 = '0.1.8'
anyhow = '1.0.75'
lazy_static = '1.4.0'

[dependencies.cpal]
git = 'https://github.com/sidit77/cpal.git'
branch = 'master'
features = ['oboe-shared-stdcxx']

[dependencies.reqwest]
version = '0'
features = ['blocking', 'rustls-tls']
default-features = false
optional = true

[dependencies.symphonia]
git = 'https://github.com/erikas-taroza/Symphonia'
branch = 'mp4-opus-improvements'
features = ['all']

[dependencies.symphonia-core]
git = 'https://github.com/erikas-taroza/Symphonia'
branch = 'mp4-opus-improvements'

[dependencies.crossbeam]
version = '0.8.2'
features = ['crossbeam-channel']

[dependencies.audiopus]
version = '0.3.0-rc.0'
optional = true

[target.'cfg(target_os = "android")'.dependencies]
jni = '0.21.1'
ndk-context = '0.1.1'

[dev-dependencies]
ratatui = '0.26.2'
crossterm = '0.27.0'
