[package]
name = "simple_audio_flutter"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "=1.82.1"
simple_audio = { path = "../../simple_audio", features = ["all"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
chrono = "0.4.38"

[profile.release]
lto = true
