[package]
name = 'simple_audio_flutter'
version = '2.0.6'
edition = '2021'

[lib]
crate-type = ['staticlib', 'cdylib']

[dependencies]
chrono = '0.4.38'

[dependencies.flutter_rust_bridge]
version = '=2.7.0'
features = ['chrono']

[dependencies.simple_audio]
path = '../../simple_audio'
features = ['all']

[dependencies.crossbeam]
version = '0.8.2'
features = ['crossbeam-channel']

[target.'cfg(target_os = "android")'.dependencies]
android_logger = '0.13.3'
log = '0.4.20'
